Fix - examples: Update the `tag` CSS to be more readable

--- a/examples/resources/demo.css
+++ b/examples/resources/demo.css
@@ -205,7 +205,7 @@ code.path {
 }
 
 code.tag {
-	color: #cad119; /* yellow */
+	color: #a1a713; /* yellow */
 	background-color: #f7f8e6;
 	border: 1px solid #D6E9C6;
 }
